<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

        <AutoCompleteTextView
            android:id="@+id/commentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commentId"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

        <AutoCompleteTextView
            android:id="@+id/commentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commentName"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete" />

        <AutoCompleteTextView
            android:id="@+id/commentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete" />

        <AutoCompleteTextView
            android:id="@+id/commentInsertBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commentInsertBody"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete|textMultiLine" />

</LinearLayout>