<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

        <AutoCompleteTextView
            android:id="@+id/postUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postUserId"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

        <AutoCompleteTextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postTitle"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete" />

        <AutoCompleteTextView
            android:id="@+id/postBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postBody"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete|textMultiLine" />

</LinearLayout>